# wiragro

./: .gitignore  AGENTS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend-laravel/: .env.example  .env.production.example  .gitignore  README.md  composer.json  phpunit.xml
backend-laravel/bootstrap/: app.php
backend-laravel/config/: app.php  cache.php  cors.php  customer.php  database.php  logging.php  rajaongkir.php  (+4 more)
backend/alembic/versions/: 20260319_0001_initial_storefront.py  20260415_0002_payment_methods.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/endpoints/: customer.py  health.py  payments.py  storefront.py  sync.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  catalog.py  customer.py  enums.py  orders.py
backend/app/schemas/: customer.py  payments.py
backend/app/services/: commerce.py  google_identity.py  sige_sync.py
backend/tests/: conftest.py  test_storefront_flow.py
docs/: hostinger-deploy.md  install-backend.md  solution-blueprint.md
web/: .env.example  README.md  google-identity-services.d.ts  next.config.ts  package-lock.json  package.json  proxy.ts  runtime-config.d.ts
(+360 files in other folders)
